--- a/components/components.html
+++ b/components/components.html
@@ -33,13 +33,29 @@
         </div>
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
+                <li data-target="#myCarousel" data-slide-to="0" class="active">
+                    <button  id = 'first'>
+                        Front
+                    </button>
+                </li>
+                <li data-target="#myCarousel" data-slide-to="1">
+                    <button id = 'second'> 
+                        Top
+                    </button>
+                </li>
+                <li data-target="#myCarousel" data-slide-to="2">
+                    <button id = 'third'>
+                        Back
+                    </button>
+                </li>
             </ol>
             <div class='carousel-inner'>
-                <div class="item active" id = 'first'>
-                    <img src='../CERV_front.JPG' alt='CERV2' usemap='#mapp' id='componentF' class='map'>
+                <div class="item active">
+                    <img src='../CERV_front.JPG' alt='CERV2' usemap='#mapp' id='componentF' class='map img-fluid center-block'>
+                    <div class="carousel-caption">
+                        <!-- <img src='../CERV_front.JPG' alt='CERV2' usemap='#mapp' id='componentF' class='map'> -->
+                        Front
+                    </div>
                     <map name="mapp" id='map1'>
                         <area id='compresser' shape='poly' coords='163,484,161,465,180,433,218,432,260,439,270,467,269,505,262,540,232,556,184,552,161,528'
                             href='../index.txt' class="{strokeWidth:3}">
@@ -49,12 +65,18 @@
                     </map>
                 </div>
                 <div class="item">
-                    <img src='../CERV_Top.JPG' alt='CERV2' usemap='#mappp' id='componentT' class='map'>
+                    <img src='../CERV_Top.JPG' alt='CERV2' usemap='#mappp' id='componentT' class='map center-block'>
+                    <div class="carousel-caption">
+                        Top
+                    </div>
                     <map name="mappp" id='map1'>
                     </map>
                 </div>
                 <div class="item">
-                    <img src='../CERV_back.JPG' alt='CERV2' usemap='#mapppp' id='componentT' class='map'>
+                    <img src='../CERV_back.JPG' alt='CERV2' usemap='#mapppp' id='componentT' class='map center-block'>
+                    <div class="carousel-caption">
+                        Back
+                    </div>
                     <map name="mapppp" id='map1'>
                     </map>
                 </div>
@@ -68,17 +90,6 @@
                 <span class="glyphicon glyphicon-chevron-right"></span>
                 <span class="sr-only">Next</span>
             </a>
-        </div>
-        <div id='side'>
-            <button class='button' id='home' onclick=>
-                Front
-            </button>
-            <button class='button' id='calculation' onclick=>
-                Back
-            </button>
-            <button class='button' id='calculation' onclick=>
-                Top
-            </button>
         </div>
     </div>
 </body>
