--- a/components/components.css
+++ b/components/components.css
@@ -20,17 +20,18 @@
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%)
 }
-canvas {
-    margin-left:40%;
-
-}
+/* img{
+    position:absolute;
+    margin:0 auto;
+} */
 
 
 #first{
     position:absolute;
     left: 35%;
     -webkit-transform: translateX(-50%);
-    transform: translateX(-50%)
+    transform: translateX(-50%);
+    
 }
 
 #second{
@@ -38,12 +39,20 @@ canvas {
     position:absolute;
     left: 50%;
     -webkit-transform: translateX(-50%);
-    transform: translateX(-50%)
+    transform: translateX(-50%);
 }
 
 #third{
     position:absolute;
     left: 65%;
     -webkit-transform: translateX(-50%);
-    transform: translateX(-50%)
+    transform: translateX(-50%);
+}
+
+.carousel-inner > .item > img {
+    margin: 0 auto;
+}
+
+.carousel-control{
+    width:10%;
 }
