--- a/components/components.html
+++ b/components/components.html
@@ -27,7 +27,7 @@
             <button class='button' id='components' onclick="location.href='../components/components.html'">
                 Components
             </button>
-            <button class='button' id='cycle_diagram' onclick="location.href='../calculations/calculation.html'">
+            <button class='button' id='cycle_diagram' onclick="location.href='../cycles/cycles.html'">
                 Cycles
             </button>
         </div>
@@ -51,16 +51,16 @@
             </ol>
             <div class='carousel-inner'>
                 <div class="item active">
-                    <img src='../CERV_front.JPG' alt='CERV2' usemap='#mapp' id='componentF' class='map img-fluid center-block'>
+                    <img src='../CERV_front.JPG' alt='CERV2' usemap='#mapp' id='componentF' class='center-block map'>
                     <div class="carousel-caption">
                         <!-- <img src='../CERV_front.JPG' alt='CERV2' usemap='#mapp' id='componentF' class='map'> -->
                         Front
                     </div>
                     <map name="mapp" id='map1'>
                         <area id='compresser' shape='poly' coords='163,484,161,465,180,433,218,432,260,439,270,467,269,505,262,540,232,556,184,552,161,528'
-                            href='../index.txt' class="{strokeWidth:3}">
+                            href='../compressor/compresser.html' class="{strokeWidth:3}">
                         <area id='circuit' href="../circuit/circuit.html" coords="186,148,281,260" shape='rect' class="{strokeWidth:3}">
-                        <area id='LED' href="../index.txt" coords="202,68,205,90,274,93,266,72" shape="poly" class="{strokeWidth:3}">
+                        <area id='LED' href="../screen/screen.html" coords="202,68,205,90,274,93,266,72" shape="poly" class="{strokeWidth:3}">
                         <area id="damper" href="../damper/damper.html" coords="162,277,245,372" shape="rect" class="{strokeWidth:3}">
                     </map>
                 </div>
