--- a/damper/damper.css
+++ b/damper/damper.css
@@ -3,3 +3,7 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1cm;
 }
+
+.intro{
+    margin-left: 10%;
+}
