--- a/components/components.css
+++ b/components/components.css
@@ -13,12 +13,8 @@
    
 } */
 
-#side{
-    position: absolute;
-    bottom: -150px;
-    left: 40%;
-    -webkit-transform: translateX(-50%);
-    transform: translateX(-50%)
+.center{
+    align-self: center;
 }
 /* img{
     position:absolute;
@@ -49,10 +45,6 @@
     transform: translateX(-50%);
 }
 
-.carousel-inner > .item > img {
-    margin: 0 auto;
-}
-
-.carousel-control{
-    width:10%;
-}
+.carousel-inner img {
+    margin: auto;
+  }
