--- a/everything.css
+++ b/everything.css
@@ -4,7 +4,13 @@
     font-size: 1cm;
 }
 
-button{
+.navigation{
+    margin-top:1%;
+    margin-left: 10%;
+    margin-bottom: 2%;
+}
+
+/* button{
     font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
     font-size: 1.5em;
     text-transform: uppercase;
@@ -25,16 +31,10 @@ button{
 .button:active {
     box-shadow: 0 3px #666;
     
-    /* -webkit-transform: translateY(-0.5%); */
+    
     transform: translate(0px,2px);
   }
-
-.navigation{
-    margin-top:1%;
-    margin-left: 10%;
-    margin-bottom: 2%;
-}
-
+*/
 body::after {
 
     content: "";
@@ -48,4 +48,22 @@ body::after {
     z-index: -1;
     height: 130vh;
 
+}
+
+button {
+    color: rgba(30, 22, 54, 0.6);
+    box-shadow: rgba(30, 22, 54, 0.4) 0 0px 0px 2px inset;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
+    font-size: 1.7em;
+    text-transform: uppercase;
+    border-radius: 10px;
+    /* border: 5px solid transparent; */
+    border-bottom-color: rgba(0,0,0,0.35);
+    cursor: pointer;
+    padding:1%;
+}
+
+.button:hover {
+    color: rgba(255, 255, 255, 0.85);
+    box-shadow: rgba(30, 22, 54, 0.7) 0 0px 0px 40px inset;
 }
