--- a/home.css
+++ b/home.css
@@ -1,10 +1,9 @@
-button{
+/* button{
     font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
     font-size: 1.7em;
     text-transform: uppercase;
     border-radius: 10px;
     color: white;
-    /* text-shadow: -1px -1px 1px rgba(0,0,0,0.8); */
     border: 5px solid transparent;
     border-bottom-color: rgba(0,0,0,0.35);
     background: hsla(260, 100%, 50%, 1);
@@ -16,61 +15,51 @@ button{
 
 .button:hover{
     background: rgb(7, 147, 240);
-}
-
-.background{
-    opacity: 0.5;
-    width: 100%;
-    height: 100%;
-}
-
-.button{
-    position: absolute;
-    left: 25%;
-    -webkit-transform: translateX(-50%);
-    transform: translateX(-50%)
-}
-
-.button:active {
-    box-shadow: 0 5px #666;
-    -webkit-transform: translateX(-25%);
-    /* -webkit-transform: translateY(-0.5%); */
-    transform: translate(-50%,4px);
-  }
-
-#home{
-    top: 30%;
-    
-}
-
-#calculation{
-    top: 45%;
-    /* align-items: center;
-    left:40.7%; */
-}
-
-#components
-{
-    top: 60%;
-    /* left: 41.4%; */
-}
-
-#cycle_diagram{
-    top: 75%;
-}
-/* #components:active{
-
 } */
+.header {
+    width: 100%;
+    height: 15vh;
+    background-color: black;
 
-#components_link{
+
+}
+
+.header-element {
+    width: 10vw;
+    height: 100%;
+    position:relative;
+    margin-top:3.5%;
+    /* color: white; */
+    display:inline-block;
+    margin-right:5%;
+}
+.element-text{
+    color:white;
+    /* display:inline-block;
+    margin-right:5%; */
+}
+.element-text:hover{
+    cursor: pointer;
+}
+
+.background {
+    /* display: table; */
+    width: 100%;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('cerv2bg.png');
+    background-position: center top;
+    height: 85vh;
+    color: white;
+}
+
+#components_link {
     width: 20vw;
     height: 65vh;
-    position:absolute;
+    position: absolute;
     top: 25%;
     left: 50%;
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%);
-    display: none; 
+    display: none;
 }
 
 /* #componentM{
@@ -78,9 +67,22 @@ button{
     height: 65vh;
 } */
 
-#cycle{
-    position: absolute;
-    top: 25%;
-    right: 5%;
-    left: auto;
+
+
+button {
+    color: rgba(30, 22, 54, 0.6);
+    box-shadow: rgba(30, 22, 54, 0.4) 0 0px 0px 2px inset;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
+    font-size: 1.7em;
+    text-transform: uppercase;
+    border-radius: 10px;
+    /* border: 5px solid transparent; */
+    border-bottom-color: rgba(0, 0, 0, 0.35);
+    cursor: pointer;
+    padding: 1%;
+}
+
+.button:hover {
+    color: rgba(255, 255, 255, 0.85);
+    box-shadow: rgba(30, 22, 54, 0.7) 0 0px 0px 40px inset;
 }
